# will-gpt

./: .dockerignore  AGENTS.md  Dockerfile  Makefile  PODMAN_SETUP.md  README.md  SEARCH_EXAMPLES.md  SEARCH_QUICK_REFERENCE.md  main.py  merge_and_upload.py  podman-compose.yml  pyproject.toml  requirements.txt  test_parser.py  test_qdrant_connection.py  test_search_flags.py
api/: __init__.py  main.py  models.py  search_service.py
config/: create_indexes.py  upload_to_qdrant.py
data/: README.md
frontend/: app.js  index.html
notebooks/: upload_to_qdrant_colab.ipynb
parsers/: __init__.py  base_parser.py  chatgpt_parser.py  claude_parser.py  claude_projects_parser.py  universal_format.py
retrieval/: README.md  create_indexes.py  get_metadata_fields.py  interactive_search.py  search_engine.py  search_qdrant.py  upload_to_qdrant.py
tests/: test_parser.py  test_projects_parser.py  test_qdrant_connection.py
